<resources>
    <!-- to support the app in multiple language all strings are written in strings.xml-->
    <string name="app_name">SoccerField</string>
    <string name="Reserve">Reserve a Field</string>
    <string name="FieldOwner">Field Owner Space</string>
    <string name="CheckField">Check available fields</string>
    <string name="LogOut">Log Out</string>
    <string name="SignOut">Sign Out</string>
    <string name="menu">MENU</string>
    <string name="fieldmaster">Welcome FieldMaster123</string>
    <string name="FieldAdmin">Fields Admin</string>
    <string name="Balance">Balance</string>
    <string name="PasswordUpdate">Password Update</string>
    <string name="CheckReserve">Check</string>
    <string name="Reservations">Reservations</string>
    <string name="SearchField">Search Field</string>
    <string name="Location">Location</string>
    <string name="Date">Date</string>
    <string name="StartingHour">Starting Hour</string>
    <string name="FinishHour">Finishing Hour</string>
    <string name="Searchs">Search</string>
    <string name="TypeID">Please type down your ID</string>
    <string name="Reserve_Codes">Please type down your reservation code</string>
    <string name="balance_admin">BALANCE</string>
    <string name="Month_Reservation">Reservations made during the month</string>
    <string name="OK">OK</string>
    <string name="total_payable">Total Payable</string>
    <string name="money_collected">Money Collected</string>
    <string name="cancel_my_reservation">Cancel my Reservation</string>
    <string name="Back">Go Back</string>
    <string name="cancel_now">Are you sure you want to cancel your reservation?</string>
    <string name="Log_in">LogIn</string>
    <string name="Log_inn">Login</string>
    <string name="Sign_in">Sign In</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="password_update">Password UPDATE</string>
    <string name="update_password">Update</string>
    <string name="old_password">Type your old password</string>
    <string name="new_password">Type your new password</string>
    <string name="retype_password">Retype the new password</string>
    <string name="Reserve_ad">RESERVATIONS</string>
    <string name="Reserve_confirm">CONFIRMATION</string>
    <string name="Reserve_info">RESERVATION INFO</string>
    <string name="void_reserve">Please show up 5 minutes prior your time or your reservation would be voided</string>
    <string name="name">Name</string>
    <string name="id_number">I.D number</string>
    <string name="field">Field</string>
    <string name="amount_to_pay">Amount to Pay</string>
    <string name="back_to_menu">Back to Menu</string>
    <string name="select_city">Select City</string>
    <string name="repeat_password">Repeat the password</string>
    <string name="retype_email">Retype email</string>
    <string name="email">e-mail</string>
    <string name="reservation_book">Your reservation is successfully booked</string>
    <string name="to_do">Check Image</string>
    <string name="selection_info">Please select the city you want to reserve a field:</string>
    <string name="changeLang">Change Language</string>
    <string name="english">en</string>
    <string name="spanish">esp</string>

</resources>