<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminOptions">

    <View
        android:id="@+id/soccerfield"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#003d33"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/fieldmaster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/fieldmaster"
        android:textColor="#00695c"
        android:textSize="15sp"
        tools:layout_editor_absoluteX="125dp"
        tools:layout_editor_absoluteY="148dp" />

    <Button
        android:id="@+id/FieldAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="#00695c"
        android:ems="10"
        android:text="@string/FieldAdmin"
        android:textColor="#FFF"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="87dp"
        tools:layout_editor_absoluteY="242dp" />

    <Button
        android:id="@+id/Balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="88dp"
        android:background="#00695c"
        android:ems="10"
        android:text="@string/Balance"
        android:textColor="#FFF"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@+id/FieldAdmin"
        tools:layout_editor_absoluteX="87dp" />

    <Button
        android:id="@+id/PasswordUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="#00695c"
        android:ems="10"
        android:text="@string/PasswordUpdate"
        android:textColor="#FFF"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="87dp"
        tools:layout_editor_absoluteY="421dp" />

    <Button
        android:id="@+id/LogOut"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/LogOut"
        android:textColor="#FFF"
        android:background="#003d33"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="137dp"
        tools:layout_editor_absoluteY="579dp" />

    <Button
        android:id="@+id/SignOut"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/SignOut"
        android:textColor="#FFF"
        android:background="#00695c"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="137dp"
        tools:layout_editor_absoluteY="647dp" />

    <TextView
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:textColor="#FFF"
        android:textSize="40sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="152dp"
        tools:layout_editor_absoluteY="30dp" />
</androidx.constraintlayout.widget.ConstraintLayout>