<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Reservation_info">

    <View
        android:id="@+id/soccerfield"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#003d33"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Reserve_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/Reserve_info"
        android:textColor="#FFF"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/soccerfield"
        app:layout_constraintStart_toStartOf="@+id/soccerfield"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/void_reserve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:text="@string/void_reserve"
        android:textColor="#003d33"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/cancel_my_reservation"
        app:layout_constraintTop_toBottomOf="@+id/soccerfield"
        app:layout_constraintVertical_bias="0.829"
        tools:layout_editor_absoluteX="30dp" />

    <Button
        android:id="@+id/cancel_my_reservation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#c62828"
        android:ems="15"
        android:text="@string/cancel_my_reservation"
        android:textColor="#FFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/soccerfield"
        app:layout_constraintVertical_bias="0.763" />

    <Button
        android:id="@+id/OK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00695c"
        android:ems="15"
        android:text="@string/OK"
        android:textColor="#FFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cancel_my_reservation" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="126dp" />

    <TextView
        android:id="@+id/ID_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_number"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="174dp" />

    <TextView
        android:id="@+id/Field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/field"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="219dp" />

    <TextView
        android:id="@+id/StartingHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/StartingHour"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="268dp" />

    <TextView
        android:id="@+id/FinishingHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FinishHour"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="317dp" />

    <TextView
        android:id="@+id/amount_to_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount_to_pay"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="366dp" />

    <EditText
        android:id="@+id/editTextTextPersonName7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="John Kim"
        tools:layout_editor_absoluteX="156dp"
        tools:layout_editor_absoluteY="113dp" />

    <EditText
        android:id="@+id/editTextTextPersonName8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="12345678"
        tools:layout_editor_absoluteX="156dp"
        tools:layout_editor_absoluteY="157dp" />

    <EditText
        android:id="@+id/editTextTextPersonName9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="POSTEC Field"
        tools:layout_editor_absoluteX="156dp"
        tools:layout_editor_absoluteY="202dp" />

    <EditText
        android:id="@+id/editTextTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="time"
        tools:layout_editor_absoluteX="157dp"
        tools:layout_editor_absoluteY="268dp" />

    <EditText
        android:id="@+id/editTextTime2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="time"
        tools:layout_editor_absoluteX="156dp"
        tools:layout_editor_absoluteY="322dp" />

    <EditText
        android:id="@+id/editTextTextPersonName11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="USD $100"
        tools:layout_editor_absoluteX="157dp"
        tools:layout_editor_absoluteY="371dp" />

</androidx.constraintlayout.widget.ConstraintLayout>