<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Password_update">

    <View
        android:id="@+id/soccerfield"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#003d33"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/password_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/password_update"
        android:textColor="#FFF"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/soccerfield"
        app:layout_constraintStart_toStartOf="@+id/soccerfield"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/update_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00695c"
        android:ems="15"
        android:text="@string/update_password"
        android:textColor="#FFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="554dp" />

    <Button
        android:id="@+id/Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00695c"
        android:ems="15"
        android:text="@string/Back"
        android:textColor="#FFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="623dp" />

    <TextView
        android:id="@+id/old_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/old_password"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="134dp" />

    <TextView
        android:id="@+id/new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="210dp" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="158dp" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="239dp" />

    <TextView
        android:id="@+id/retype_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retype_password"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="303dp" />

    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="335dp" />


</androidx.constraintlayout.widget.ConstraintLayout>