<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cancel_Reservation">

    <Button
        android:id="@+id/cancel_my_reservation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#c62828"
        android:ems="15"
        android:text="@string/cancel_my_reservation"
        android:textColor="#FFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="554dp" />

    <Button
        android:id="@+id/Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00695c"
        android:ems="15"
        android:text="@string/Back"
        android:textColor="#FFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="623dp" />

    <TextView
        android:id="@+id/cancel_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_now"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="304dp" />
</androidx.constraintlayout.widget.ConstraintLayout>